--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   background-color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
+body{
+  background-color: black;
+}
 h1{
   color:white;
 }
