--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   background-color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
-body{
-  background-color: black;
+html{
+  background-color: #FFD580;
 }
 h1{
   color:white;
